--- a/lab13.vcxproj
+++ b/lab13.vcxproj
@@ -129,6 +129,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="camera.h" />
     <ClInclude Include="main.h" />
     <ClInclude Include="stb_image.h" />
   </ItemGroup>
