Replaced sphere model

--- a/lab13.vcxproj
+++ b/lab13.vcxproj
@@ -131,6 +131,7 @@
   <ItemGroup>
     <ClInclude Include="camera.h" />
     <ClInclude Include="main.h" />
+    <ClInclude Include="shaders.h" />
     <ClInclude Include="stb_image.h" />
   </ItemGroup>
   <ItemGroup>
